--- a/myprofile/index.html
+++ b/myprofile/index.html
@@ -85,7 +85,7 @@
 			<h3 class="cd-headline clip is-full-width">
 				<span>CRAZY PASSIONATE AT </span>
 				<span class="cd-words-wrapper">
-					<b class="is-visible">Web Developer</b>
+					<b class="is-visible">Web Development</b>
 					<b>Web Design</b>
 					<b>Creative Design</b>
 					<b>IT SUPPORT</b>
