--- a/myprofile/index.html
+++ b/myprofile/index.html
@@ -48,7 +48,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">
-			hari
+			hari.
 		</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
@@ -124,7 +124,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="message-box">                        
-                        <h2>About Dominic.</h2>
+                        <h2>About Hari.</h2>
                         <p> As a Front End developer my responsibilities included, Planning user experience. Develop site in Responsive. Unit testing and bugs fixation Back end integration support Web designers should using of HTML and CSS is enough to create a page, but the designed page might not be fully functional, as it would work like a static page. After developing the static HTML page, the Web designer passes this page to a Web developer for adding functionality and to make it interactive with the help of JavaScript or other programming languages. Working with E-commerce projects, Fashion websites, financial websites, banking websites.  Interacting with various clients like Hong Kong, Singapore. </p>
 						<p>A team player with strong analytical skills and possess an ability in determining the exact application of technology in formulating the most optimal solution for the business requirement holding high degree of problem solving abilities.</p>
 
