--- a/myprofile/index.html
+++ b/myprofile/index.html
@@ -23,9 +23,9 @@
     <!-- Site CSS -->
     <link rel="stylesheet" href="style.css">
     <!-- Responsive CSS -->
-    <link rel="stylesheet" href="css/responsive.css">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/custom.css">
+    <link rel="stylesheet" href="css/responsive.css">
 	<script src="js/modernizr.js"></script> <!-- Modernizr -->
 
     <!--[if lt IE 9]>
@@ -85,7 +85,7 @@
 			<h3 class="cd-headline clip is-full-width">
 				<span>CRAZY PASSIONATE AT </span>
 				<span class="cd-words-wrapper">
-					<b class="is-visible">Web Development</b>
+					<b class="is-visible">Web Developer</b>
 					<b>Web Design</b>
 					<b>Creative Design</b>
 					<b>IT SUPPORT</b>
