--- a/bootstream/index.html
+++ b/bootstream/index.html
@@ -13,8 +13,7 @@
 <meta property="og:type" content="website" />
 <meta property="og:title" content="" />
 <meta property="og:description" content="" />
-<meta property="og:image" content=" />
-<link rel="shortcut icon" href="">
+<meta property="og:image" content="" />
 
 <title>Bootsream</title>
 <!--[if lt IE 9]>
@@ -41,6 +40,7 @@
     </header>
     <section class="main-div">
       <img class="robo" alt="" src="images/robo3.gif">
+      <img class="robo-side" alt="" src="images/robo-side.png">
       <div class="product-div">
         <h2>Robotic Process Automation</h2>
         <a class="one" href="#">One</a>
