--- a/botnew/test.html
+++ b/botnew/test.html
@@ -38,7 +38,7 @@ data-botId="5ef5c65888d49d0007bacbd1"
   <script type="text/javascript">
     var s = document.createElement('script'); 
     s.type = 'text/javascript'; s.async = true; 
-    s.src = 'script/test-injection.js'; 
+    s.src = 'https://github.com/arikrishnan1990/TamilanHari/blob/master/botnew/script/test-injection.js'; 
     document.getElementById('botcopy-embedder-d7lcfheammjct').appendChild(s);
   </script>
 </div>
