--- a/botnew/test.html
+++ b/botnew/test.html
@@ -24,7 +24,7 @@
 <!-- Add custom CSS here -->
 <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;900&display=swap" rel="stylesheet">
 <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css">
-<link href="css/main.css" rel="stylesheet">
+<link href="https://github.com/arikrishnan1990/TamilanHari/blob/master/botnew/css/main.css" rel="stylesheet">
 <!-- <link href="css/media-query.css" rel="stylesheet"> -->
 
 <link href="favicon.ico" rel="shortcut icon">
@@ -43,7 +43,7 @@ data-botId="5ef5c65888d49d0007bacbd1"
   </script>
 </div>
 <!-- JavaScript --> 
-<script src="script/jquery.min.js"></script> 
+<script src="https://github.com/arikrishnan1990/TamilanHari/blob/master/botnew/script/jquery.min.js"></script> 
 <script>
 
     $(document).ready(function() {
