--- a/botnew/test.html
+++ b/botnew/test.html
@@ -27,7 +27,7 @@
 <link href="https://arikrishnan1990.github.io/TamilanHari/botnew/css/main.css" rel="stylesheet">
 <!-- <link href="css/media-query.css" rel="stylesheet"> -->
 
-<link href="images/bot.ico" rel="shortcut icon">
+<link href="images/icon.png" rel="shortcut icon">
 <meta name="robot" content="noindex, nofollow">
 <body>
  <div
