--- a/botnew/test.html
+++ b/botnew/test.html
@@ -45,7 +45,9 @@ data-botId="5ef5c65888d49d0007bacbd1"
 <!-- JavaScript --> 
 <script src="https://arikrishnan1990.github.io/TamilanHari/botnew/script/jquery.min.js"></script> 
 <script>
-
+     $(document).ready(function() {
+         $('.toggle-more-options-paper svg').hide();
+     });
 </script>
 </body>
 </html>
