--- a/botnew/test.html
+++ b/botnew/test.html
@@ -47,6 +47,7 @@ data-botId="5ef5c65888d49d0007bacbd1"
 <script>
      $(document).ready(function() {
          $('.toggle-more-options-paper svg').hide();
+         alert();
      });
 </script>
 </body>
