--- a/Matrimony/landing.html
+++ b/Matrimony/landing.html
@@ -32,7 +32,7 @@
 				<a href="mailto:Harishuxrgae@gmail.com"><span>ஈமெயில் செய்ய</span>: Harishuxrgae@gmail.com</a>
 			<div>
 			<div class="social">
-				<h3>எங்கள் சண்முக வழித்தடங்கள்</h3>
+				<h3>எங்கள் சமூக வழித்தடங்கள்</h3>
 				<ul class="social-list">
 					<li>
 						<a href=""><i class="fa fa-facebook"></i></a>
